--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,3 +1,20 @@
-<style>
-head { background-color: rgb(80, 139, 90); }
-<style>
+body{
+.box1 { width: 500px;
+    height: 500px;
+    background-color: red;
+    position: absolute;
+    top: 100px;
+    left: 100px}
+.box2 { width: 500px;
+    height: 500px;
+    background-color: rgb(38, 0, 255);
+    position: absolute;
+    top: 300px;
+    left: 300px}
+.box3 { width: 500px;
+    height: 500px;
+    background-color: rgb(0, 255, 0);
+    position: absolute;
+    top: 500px;
+    left: 500px}
+}
