--- a/microsite/styles.css
+++ b/microsite/styles.css
@@ -31,7 +31,12 @@ nav {
     display: flex;
     justify-content: center;
 }
-img{
-    width: 200px;
-    height:auto;
+img {
+    width: 300px;
+    height: auto;
+}
+.poker{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
