--- a/microsite/styles.css
+++ b/microsite/styles.css
@@ -34,12 +34,10 @@ nav {
 img {
     width: 100%;
     height: auto;
+    padding-bottom: 200px;
 }
 .poker{
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-.space{
-    margin: 200px;
 }
